@@ -3,17 +3,17 @@ package net.ollycodes.modlogger;
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.context.CommandContext;
-import net.minecraft.commands.CommandSourceStack;
-import net.minecraft.commands.Commands;
-import net.minecraft.network.chat.TextComponent;
-import net.minecraft.world.entity.player.Player;
+import net.minecraft.command.CommandSource;
+import net.minecraft.command.Commands;
+import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.util.text.StringTextComponent;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Arrays;
 import java.util.Objects;
 
 public class MLCommand {
-    public static void register(CommandDispatcher<CommandSourceStack> dispatcher){
+    public static void register(CommandDispatcher<CommandSource> dispatcher){
         dispatcher.register(
             Commands.literal("ml")
                 .then(Commands.literal("reload").executes(MLCommand::reload))
@@ -38,23 +38,23 @@ public class MLCommand {
         );
     }
 
-    private static boolean canExecuteCommand(CommandSourceStack source) {
-        if (source.getEntity() instanceof Player) {
+    private static boolean canExecuteCommand(CommandSource source) {
+        if (source.getEntity() instanceof PlayerEntity) {
             if (ModLogger.fileHandler.config.commandPermissionLevel == -1) return false;
             return source.hasPermission(ModLogger.fileHandler.config.commandPermissionLevel);
         }
         return true;
     }
 
-    private static int whitelist(CommandContext<CommandSourceStack> context) {
+    private static int whitelist(CommandContext<CommandSource> context) {
         if (!canExecuteCommand(context.getSource())) return 0;
 
         String action = context.getArgument("action", String.class);
         String username = context.getArgument("username", String.class);
 
-        if (!List.of("add", "remove").contains(action)) {
+        if (!Arrays.asList("add", "remove").contains(action)) {
             context.getSource().sendFailure(
-                new TextComponent("[ModLogger] Invalid action: /ml whitelist <add|remove> <username>")
+                new StringTextComponent("[ModLogger] Invalid action: /ml whitelist <add|remove> <username>")
             );
             return 0;
         }
@@ -63,13 +63,13 @@ public class MLCommand {
             ModLogger.fileHandler.loadConfig();
             if (Objects.equals(action, "add")) {
                 if (ModLogger.fileHandler.config.kick.playerWhitelist.contains(username)) {
-                    context.getSource().sendFailure(new TextComponent("[ModLogger] Player is already whitelisted"));
+                    context.getSource().sendFailure(new StringTextComponent("[ModLogger] Player is already whitelisted"));
                     return 0;
                 }
                 ModLogger.fileHandler.config.kick.playerWhitelist.add(username);
             } else {
                 if (!ModLogger.fileHandler.config.kick.playerWhitelist.contains(username)) {
-                    context.getSource().sendFailure(new TextComponent("[ModLogger] Player is not whitelisted"));
+                    context.getSource().sendFailure(new StringTextComponent("[ModLogger] Player is not whitelisted"));
                     return 0;
                 }
                 ModLogger.fileHandler.config.kick.playerWhitelist.remove(username);
@@ -81,7 +81,7 @@ public class MLCommand {
         }
 
         context.getSource().sendSuccess(
-            new TextComponent(
+            new StringTextComponent(
                 "[ModLogger] %1 has been %2 the whitelist"
                     .replace("%1", username)
                     .replace("%2", Objects.equals(action, "add") ? "added to" : "removed from")
@@ -90,15 +90,19 @@ public class MLCommand {
         return 1;
     }
 
-    private static int reload(CommandContext<CommandSourceStack> context) {
+    private static int reload(CommandContext<CommandSource> context) {
         if (!canExecuteCommand(context.getSource())) return 0;
 
         try {
             ModLogger.fileHandler.loadConfig();
-            context.getSource().sendSuccess(new TextComponent("[ModLogger] Reloaded mod logger config."), false);
+            context.getSource().sendSuccess(
+                new StringTextComponent("[ModLogger] Reloaded mod logger config."), false
+            );
         } catch (IOException e) {
             ModLogger.logger.error("Failed to reload config: {}", e.getMessage());
-            context.getSource().sendFailure(new TextComponent("[ModLogger] Failed to reload mod logger config."));
+            context.getSource().sendFailure(
+                new StringTextComponent("[ModLogger] Failed to reload mod logger config.")
+            );
         }
 
         return 1;
